Set default configs for pc 570